--- a/ProjectsGrid.html
+++ b/ProjectsGrid.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
 
   <title>CodeTogetherNG</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <meta content="CodeTogetherNG" name="description">
 
   <link rel="stylesheet" href="css/site.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
