--- a/Technologies.html
+++ b/Technologies.html
@@ -8,9 +8,11 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
+
   <link rel="stylesheet" href="css/site.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.4.0.min.js" ></script>
+   <script src="/js/technologies.js" ></script>
  </head>
 
 <body>
@@ -49,41 +51,8 @@
 	<H1>List of Technologies</H1>
 	
 <table class="table-bordered table-striped" id="TechTable" style="font-size: 20px;"></table>
- 
- <script>
-
-	var errorInRetrievingTechnologies = function ()
-	{
-		alert("Unable to retrieve list of technologies")
-	}
-
-	var populateTechnologiesTable = function (data)
-	{
-		for (var i =0; i<data.length;++i)
-		{
-			var tr = document.createElement("tr");
-			var td = document.createElement("td");
-			tr.append(td);
-
-			td.textContent = data[i].techName;
-
-			$("#TechTable").append(tr);
-		}
-	}
-
-	$.ajax(
-		{
-			url:"https://localhost:44332/API/TechList",
-			dataType : "json" ,
-			crossDomain: true
-		})
-		.done(populateTechnologiesTable)
-		.fail(errorInRetrievingTechnologies);
-
- </script>
-
-  <script src="js/scripts.js" ></script>
-  </div>
+</div>
+</body>
    <footer>
             <div class="container">
                 <div class="row">
@@ -94,5 +63,4 @@
                 </div>
             </div>
         </footer>
-</body>
 </html>
