--- a/Technologies.html
+++ b/Technologies.html
@@ -5,10 +5,8 @@
   <meta charset="utf-8">
 
   <title>CodeTogetherNG</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
-
+   <meta content="CodeTogetherNG" name="description">
+ 
   <link rel="stylesheet" href="css/site.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.4.0.min.js" ></script>
