--- a/ProjectDetails.html
+++ b/ProjectDetails.html
@@ -25,15 +25,16 @@
                 <ul class="nav navbar-nav">
                     <li id="About"><a href="About.html">About</a></li>
                     <li id="Contact"><a href="Contact.html">Contact</a></li>
-                    <li id="AddProject"><a href="AddProject.html">Add Project</a></li>
+                    <li id="AddProject" class="logged"><a href="AddProject.html">Add Project</a></li>
                     <li id="ProjectsGrid"><a href="ProjectsGrid.html">Projects</a></li>
                     <li id="TechnologiesList"><a href="Technologies.html">Technologies</a></li>
                     <li id="UsersList"><a href="Users.html">Users</a></li>
-                     <ul class="nav navbar-nav navbar-right">
-                        <li id="Register"><a href="Register.html">Register</a></li>
-                         <li id="Login"><a href="Login.html">Login</a></li>
-                    </ul>
-                </ul>
+                    <li id="Profile" class="logged"><a href="Profile.html">Profile</a></li>
+                     <ul class="nav navbar-nav navbar-right unlogged">
+                                <li id="Register" ><a href="Register.html">Register</a></li>
+                                <li id="Login" ><a href="Login.html">Login</a></li>
+                        </ul>
+                 </ul>
               </div>
            </div>
     </div>
@@ -128,6 +129,8 @@
 
 <script src="https://code.jquery.com/jquery-3.4.0.min.js" ></script>
 <script src="/js/projectdetails.js" ></script>
+<script src="/js/LayoutForLoggedUsers.js" ></script>
+
 
 </body>
         <footer>
