--- a/Register.html
+++ b/Register.html
@@ -26,15 +26,16 @@
                 <ul class="nav navbar-nav">
                     <li id="About"><a href="About.html">About</a></li>
                     <li id="Contact"><a href="Contact.html">Contact</a></li>
-                    <li id="AddProject"><a href="AddProject.html">Add Project</a></li>
+                    <li id="AddProject" class="logged"><a href="AddProject.html">Add Project</a></li>
                     <li id="ProjectsGrid"><a href="ProjectsGrid.html">Projects</a></li>
                     <li id="TechnologiesList"><a href="Technologies.html">Technologies</a></li>
                     <li id="UsersList"><a href="Users.html">Users</a></li>
-                     <ul class="nav navbar-nav navbar-right">
-                        <li id="Register"><a href="Register.html">Register</a></li>
-                         <li id="Login"><a href="Login.html">Login</a></li>
+                    <li id="Profile" class="logged"><a href="Profile.html">Profile</a></li>
+                     <ul class="nav navbar-nav navbar-right unlogged">
+                                <li id="Register" ><a href="Register.html">Register</a></li>
+                                <li id="Login" ><a href="Login.html">Login</a></li>
                     </ul>
-                </ul>
+                 </ul>
               </div>
            </div>
     </div>
@@ -73,117 +74,8 @@
 
     </div>
 </div>
-    <!-- <script> 
-function isEmail(email) {
-  var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
-  return regex.test(email);
-};
+   <script src="/js/LayoutForLoggedUsers.js" ></script>
 
-
-function ValidateEmail()
-{
-    if(isEmail($("#Input_Email").val()))
-    {
-        $("#errorEmail").hide();
-         return true;
-    }
-    else { 
-        $("#errorEmail").show(); 
-         return false;
-    }
-};
-
-$("#Input_Email")
-      .focusout(ValidateEmail);
-
-
-function IsPasswordValid(password) {
-    return (password.length>5&& password.length<101);
-};
-
-function ArePasswordsTheSame(password, confirmPassword) {
-    return password==confirmPassword;
-};
-
-function ValidatePassword()
-{
-    if($("#Input_ConfirmPassword").val())
-        ValidatePasswordsAreTheSame();
-
-    if(IsPasswordValid($("#Input_Password").val()))
-    {
-        $("#errorPassword").hide();
-         return true;
-    }
-    else { 
-        $("#errorPassword").show(); 
-         return false;
-    }
-};
-
-$("#Input_Password")
-      .focusout(ValidatePassword);
-
-function ValidatePasswordsAreTheSame() 
-{
-     if(ArePasswordsTheSame($("#Input_Password").val(), $("#Input_ConfirmPassword").val()))
-    {
-        $("#errorConfirmPassword").hide();
-        return true;
-    }
-    else { 
-        $("#errorConfirmPassword").show();
-        return false; 
-    }
- }
-
- $("#Input_ConfirmPassword")
-  .focusout(ValidatePasswordsAreTheSame);
-
-function ValidateForm()
-{
-    return ValidateEmail() && ValidatePassword() && ValidatePasswordsAreTheSame();
-}
-
-function Register(){
-    debugger;
-    if(ValidateForm())
-    {
-        var userDto={ 
-                    Username: $("#Input_Email").val(),
-                    Password: $("#Input_Password").val()
-                };
-        $.ajax(
-            {
-                type:"POST",
-                url:"https://localhost:44332/API/User/Register",
-                dataType : "json" ,
-                crossDomain: true,
-                contentType: "application/json; charset=utf-8",
-                data: JSON.stringify(userDto)
-            })
-            .done(RegisterSuccess)
-            .fail(RegisterFailed);
-    }
-}
-function RegisterSuccess(){ debugger;
-}
- 
-function RegisterFailed(e,w,q){ 
-   debugger;
-   $("#errorsList")[0].innerHTML='';
-
-    e.responseJSON.forEach(function(item)
-    {
-            var li = document.createElement("li");
-   
-            li.textContent = item.description;
-
-            $("#errorsList").append(li);
-    })
-}  
-
-</script> -->
 </body>
         <footer>
             <div class="container">
