--- a/Requests.html
+++ b/Requests.html
@@ -5,12 +5,11 @@
   <meta charset="utf-8">
 
   <title>CodeTogetherNG</title>
-   <meta content="CodeTogetherNG" name="description">
- 
+  <meta content="CodeTogetherNG" name="description">
+
   <link rel="stylesheet" href="css/site.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.4.0.min.js" ></script>
-   <script src="/js/technologies.js" ></script>
  </head>
 
 <body>
@@ -24,9 +23,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-               <a href="About.html">CodeTogetherNG</a>
+                <a href="About.html">CodeTogetherNG</a>
             </div>
-             <div class="navbar-collapse collapse">
+            <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li id="About"><a href="About.html">About</a></li>
                     <li id="Contact"><a href="Contact.html">Contact</a></li>
@@ -35,27 +34,55 @@
                     <li id="TechnologiesList"><a href="Technologies.html">Technologies</a></li>
                     <li id="UsersList"><a href="Users.html">Users</a></li>
                     <li id="Profile" class="logged"><a href="Profile.html">Profile</a></li>
-                        <ul class="nav navbar-nav navbar-right unlogged">
+                     <ul class="nav navbar-nav navbar-right unlogged">
                                 <li id="Register" ><a href="Register.html">Register</a></li>
                                 <li id="Login" ><a href="Login.html">Login</a></li>
                         </ul>
-                        <ul class="nav navbar-nav navbar-right logged">
-                            <li  ><a id="LoggedUser" href="Register.html"></a></li>
-                        </ul>
                  </ul>
               </div>
+
+            </div>
         </div>
-    </nav>
+           </nav>
 
 <div class="container body-content">
-	<H1>List of Technologies</H1>
-	
-<table class="table-bordered table-striped" id="TechTable" style="font-size: 20px;"></table>
-</div>
-<script src="/js/LayoutForLoggedUsers.js" ></script>
+</br>
+
+<h2>Requests from users</h2>
+<hr>
+
+
+    <div class="list-group">
+                <div class="col-md-12">
+                    <div class="list-group-item" id="project_2">
+                        <div class="flex">
+                            <h4 float:"left"=""> SecondProject </h4>
+                            <small>
+
+                                <p> coder@a.com</p>
+                                <p> 22/04/2019</p>
+                            </small>
+                        </div>
+                        <div class="flex">
+                            <p id="Message"> message </p>
+                        </div>
+                        <div>
+                            <input type="button" class="btn btn-light" id="Accept_coder@a.com" value="Accept" onclick="Accept(7, true)">
+                            <input type="button" class="btn btn-light" id="Decline_coder@a.com" value="Decline" onclick="location.href='/Member/ReactToRequest/7?accept=False&amp;ProjectId=2'">
+                        </div>
+                    </div>
+                </div>
+    </div>
+
+
+
+       
+
+  </div>
+  <script src="/js/LayoutForLoggedUsers.js" ></script>
 
 </body>
-   <footer>
+ <footer>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
