Task177: jquery: consume a new webapi endpoint to ensure that user is logged and get his user name. This should amend navigation bar Task188: jQuery: Project detail page

--- a/AddProject.html
+++ b/AddProject.html
@@ -42,6 +42,10 @@
                          <ul class="nav navbar-nav navbar-right logged">
                             <li  ><a id="LoggedUser" href="Register.html"></a></li>
                       </ul>
+                       <ul class="nav navbar-nav navbar-right logged">
+                            <li  ><a id="LoggedUser" href="Profile.html"></a></li>
+                            <li  ><a id="LogOut" href="About.html">LogOut</a></li>
+                        </ul>
                  </ul>
               </div>
             </div>
