--- a/Login.html
+++ b/Login.html
@@ -34,6 +34,10 @@
                                 <li id="Register" ><a href="Register.html">Register</a></li>
                                 <li id="Login" ><a href="Login.html">Login</a></li>
                         </ul>
+                         <ul class="nav navbar-nav navbar-right logged">
+                            <li  ><a id="LoggedUser" href="Profile.html"></a></li>
+                            <li  ><a id="LogOut" href="About.html">LogOut</a></li>
+                        </ul>
                  </ul>
               </div>
         </div>
