--- a/ProjectsGrid.html
+++ b/ProjectsGrid.html
@@ -40,7 +40,7 @@
                                 <li id="Login" ><a href="Login.html">Login</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right logged">
-                            <li  ><a id="LoggedUser" href="Register.html"></a></li>
+                            <li  ><a id="LoggedUser" href="Profile.html"></a></li>
                             <li  ><a id="LogOut" href="About.html">LogOut</a></li>
                         </ul>
                  </ul>
