--- a/Requests.html
+++ b/Requests.html
@@ -38,6 +38,10 @@
                                 <li id="Register" ><a href="Register.html">Register</a></li>
                                 <li id="Login" ><a href="Login.html">Login</a></li>
                         </ul>
+                         <ul class="nav navbar-nav navbar-right logged">
+                            <li  ><a id="LoggedUser" href="Profile.html"></a></li>
+                            <li  ><a id="LogOut" href="About.html">LogOut</a></li>
+                        </ul>
                  </ul>
               </div>
 
@@ -80,7 +84,7 @@
 
   </div>
   <script src="/js/LayoutForLoggedUsers.js" ></script>
-
+  <script src="/js/requests.js" ></script>
 </body>
  <footer>
             <div class="container">
