--- a/Users.html
+++ b/Users.html
@@ -39,8 +39,9 @@
                             <li id="Login" ><a href="Login.html">Login</a></li>
                       </ul>
                       <ul class="nav navbar-nav navbar-right logged">
-                            <li  ><a id="LoggedUser" href="Register.html"></a></li>
-                      </ul>
+                            <li  ><a id="LoggedUser" href="Profile.html"></a></li>
+                            <li  ><a id="LogOut" href="About.html">LogOut</a></li>
+                        </ul>
                  </ul>
               </div>
             </div>
