Task178: jquery: screen for accept/reject join requests Task184: jquery: add join request section to Details Page Task188: jQuery: Project detail page

--- a/ProjectDetails.html
+++ b/ProjectDetails.html
@@ -16,7 +16,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 </button>
-                <a href="About.html">CodeTogetherNG</a>
+                <a class="navbar-brand" id="Home" href="About.html">CodeTogetherNG</a>
+                
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -113,11 +114,11 @@
     
     <button onclick="SendRequest()" class="btn btn-default user" style ="display:none">Send</button>
     </br>
-    <button onclick="" class="btn btn-default owner" style ="display:none">Save</button>
+    <button onclick="EditProject()" class="btn btn-default owner" style ="display:none">Save</button>
     </br>
     <button onclick="DeleteProject()" class="btn btn-default owner" style ="display:none">Delete project</button>
     </br>
-    <button onclick="Register()" class="btn btn-default owner" style ="display:none">Show New Requests</button>
+    <button onclick="ShowNewRequests()" class="btn btn-default owner" style ="display:none">Show New Requests</button>
     </br>
     <script src="https://code.jquery.com/jquery-3.4.0.min.js" ></script>
     <script src="/js/LayoutForLoggedUsers.js" ></script>
