--- a/Requests.html
+++ b/Requests.html
@@ -23,7 +23,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="About.html">CodeTogetherNG</a>
+                <a class="navbar-brand" id="Home" href="About.html">CodeTogetherNG</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -57,24 +57,8 @@
 
 
     <div class="list-group">
-                <div class="col-md-12">
-                    <div class="list-group-item" id="project_2">
-                        <div class="flex">
-                            <h4 float:"left"=""> SecondProject </h4>
-                            <small>
-
-                                <p> coder@a.com</p>
-                                <p> 22/04/2019</p>
-                            </small>
-                        </div>
-                        <div class="flex">
-                            <p id="Message"> message </p>
-                        </div>
-                        <div>
-                            <input type="button" class="btn btn-light" id="Accept_coder@a.com" value="Accept" onclick="Accept(7, true)">
-                            <input type="button" class="btn btn-light" id="Decline_coder@a.com" value="Decline" onclick="location.href='/Member/ReactToRequest/7?accept=False&amp;ProjectId=2'">
-                        </div>
-                    </div>
+                <div class="col-md-12" id="grid">
+                    
                 </div>
     </div>
 
