--- a/Technologies.html
+++ b/Technologies.html
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-               <a href="About.html">CodeTogetherNG</a>
+               <a class="navbar-brand" id="Home" href="About.html">CodeTogetherNG</a>
             </div>
              <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
